--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,3 +1,20 @@
+@import 'components/main';
+
+@import 'layout/sidebar';
+
+html {
+  font: {
+    family: 'Open Sans', sans-serif;
+    size: 20px;
+  }
+}
+
 body {
+  display: flex;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  top: 0;
   margin: 0;
 }
