--- a/src/scss/components/_project.scss
+++ b/src/scss/components/_project.scss
@@ -1,6 +1,7 @@
 .project {
   flex-grow: 1;
-  overflow: auto;
+  display: flex;
+  flex-direction: column;
 
   &__container {
     max-width: 40rem;
