--- a/src/scss/components/_add-item.scss
+++ b/src/scss/components/_add-item.scss
@@ -22,6 +22,7 @@
   }
 
   &:focus {
-    background-color: transparentize($secondary, 0.7);
+    background-color: $secondary;
+    color: white;
   }
 }
