--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,9 +1,11 @@
 @import 'helpers/colors';
 
 @import 'components/add-item';
+@import 'components/submit-button';
 @import 'components/project';
 @import 'components/task-list-header';
 @import 'components/task-list';
+@import 'components/task-item';
 
 @import 'layout/sidebar';
 
